feat: init base work of redirect
